event detail overflow bug fix

--- a/src/components/Events/style.scss
+++ b/src/components/Events/style.scss
@@ -1,6 +1,7 @@
 .events-page-big-container {
     background-color: white;
     min-height: 92vh;
+    overflow-y: hidden;
 
     .events-page-medium-container {
         min-height: 89.6vh;
@@ -127,6 +128,7 @@
     }
 
     .event-details {
+        min-width: 1200px;
 
         .event-header {
             height: 212px;
@@ -167,6 +169,10 @@
                 .event-date {
                     color: gray;
                     font-size: 120%;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 1;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
                 }
 
                 .title {
